# spy-mobile-apkv1

./: Dockerfile  Dockerfile.corrigido  Dockerfile.final  GERAR-APK-WINDOWS.md  GUIA-COLAB-APK.md  INSTRUCOES_BUILD_APK.md  IROD_SPY_BUILD_COLAB.ipynb  LICENSE  README.md  README_BUILD.md  SOLUCOES-APK.md  TODO.md  accessibility_monitor.py  app_toga.py  apps_utils.py  build-android.bat  build-apk-windows.bat  build-colab.py  build-docker-windows.bat  build-docker.bat  build-fix.bat  build-local-windows.py  build-python-direto.bat  build-screenshot-spy.bat  build-simples.bat  build-social-monitor.bat  build-windows.bat  build_apk.bat  build_apk_docker.bat  build_beeware.bat  build_simple.bat  build_windows.bat  buildozer-fixed.spec  buildozer-social.spec  buildozer.spec  cd  colab_build.py  colab_commands.txt  colab_commands_fixed.txt  colab_fix.py  (+30 more)
.github/workflows/: build-apk.yml
calcme.dist-info/: METADATA  top_level.txt
data/: icon_placeholder.txt
decompiled_apk/: AndroidManifest.xml  apktool.yml
decompiled_apk/assets/chaquopy/: app.imy  build.json  requirements-common.imy
decompiled_apk/original/: AndroidManifest.xml
decompiled_apk/res/drawable/: splash_screen_background.xml
decompiled_apk/res/mipmap-anydpi-v26/: ic_launcher.xml
decompiled_apk/res/values/: colors.xml  ids.xml  public.xml  strings.xml  styles.xml
decompiled_apk/res/values-v35/: styles.xml
decompiled_apk/res/xml/: file_paths.xml
decompiled_apk/smali/androidx/activity/: EdgeToEdge.smali  PipHintTrackerKt$trackPipAnimationHintView$flow$1.smali
decompiled_apk/smali/androidx/appcompat/app/: AppCompatDelegateImpl.smali
decompiled_apk/smali/androidx/appcompat/widget/: ActivityChooserModel$PersistHistoryAsyncTask.smali  ActivityChooserModel.smali  SuggestionsAdapter.smali  SwitchCompat.smali
decompiled_apk/smali/androidx/constraintlayout/widget/: ConstraintAttribute.smali  ConstraintProperties.smali  ConstraintSet.smali
decompiled_apk/smali/androidx/core/app/: NotificationCompat$Action$Builder.smali  NotificationCompat$BubbleMetadata$Builder.smali  NotificationCompat$CallStyle.smali  NotificationCompat$CarExtender$UnreadConversation$Builder.smali  NotificationCompat$CarExtender.smali  NotificationCompat$MessagingStyle$Message.smali  NotificationCompat$MessagingStyle.smali  NotificationCompat$Style.smali  NotificationCompat$TvExtender.smali  NotificationCompat.smali  NotificationCompatBuilder.smali  NotificationCompatJellybean.smali  RemoteInput.smali  ShareCompat$IntentBuilder.smali
decompiled_apk/smali/androidx/core/content/: ContextCompat$LegacyServiceMapHolder.smali  ContextCompat.smali  FileProvider.smali
decompiled_apk/smali/androidx/core/graphics/: BitmapCompat.smali  TypefaceCompat.smali  TypefaceCompatUtil.smali
decompiled_apk/smali/androidx/core/location/: LocationCompat.smali  LocationManagerCompat$Api19Impl.smali  LocationManagerCompat$Api30Impl.smali  LocationManagerCompat.smali  LocationRequestCompat$Api19Impl.smali  LocationRequestCompat$Builder.smali
decompiled_apk/smali/androidx/core/os/: TraceCompat.smali
decompiled_apk/smali/androidx/core/provider/: FontProvider.smali
decompiled_apk/smali/androidx/core/text/: PrecomputedTextCompat.smali
decompiled_apk/smali/androidx/core/view/: ContentInfoCompat.smali  DisplayCompat.smali  ViewCompat.smali  WindowInsetsControllerCompat$Impl30.smali
decompiled_apk/smali/androidx/core/widget/: NestedScrollView.smali  TextViewCompat$OreoCallback.smali  TextViewCompat.smali
decompiled_apk/smali/androidx/lifecycle/: FlowLiveDataConversions.smali  LifecycleController.smali  LifecycleRegistry.smali  Lifecycling.smali  Transformations.smali  WithLifecycleStateKt.smali
decompiled_apk/smali/androidx/transition/: ArcMotion.smali  ChangeBounds.smali  ChangeTransform$Transforms.smali  ChangeTransform.smali  Explode.smali  Slide.smali  Transition.smali  TransitionInflater.smali  TransitionSet.smali  ViewUtils.smali  Visibility.smali
decompiled_apk/smali/kotlin/collections/: ArrayDeque.smali  SlidingWindowKt.smali
decompiled_apk/smali/kotlin/concurrent/: TimersKt.smali
decompiled_apk/smali/kotlin/io/: FileTreeWalk.smali  FilesKt__FileReadWriteKt.smali  FilesKt__UtilsKt.smali
decompiled_apk/smali/kotlin/text/: StringsKt__StringsJVMKt.smali  StringsKt__StringsKt.smali
decompiled_apk/smali/kotlinx/coroutines/: BuildersKt__Builders_commonKt.smali  CancellableContinuationImpl.smali  CancellableContinuationKt.smali  DefaultExecutor.smali  DispatchedTask.smali  DispatchedTaskKt.smali  JobSupport$Finishing.smali  JobSupport$children$1.smali  JobSupport.smali
decompiled_apk/smali_classes2/androidx/appcompat/: R$color.smali  R$drawable.smali  R$string.smali  R$style.smali  R$styleable.smali
decompiled_apk/smali_classes2/androidx/cardview/: R$style.smali
decompiled_apk/smali_classes2/androidx/coordinatorlayout/: R$string.smali  R$style.smali
decompiled_apk/smali_classes2/androidx/core/: R$color.smali  R$string.smali  R$style.smali
decompiled_apk/smali_classes2/androidx/customview/: R$string.smali  R$style.smali
decompiled_apk/smali_classes2/androidx/drawerlayout/: R$string.smali  R$style.smali
decompiled_apk/smali_classes2/androidx/dynamicanimation/: R$string.smali  R$style.smali
decompiled_apk/smali_classes2/androidx/fragment/: R$string.smali  R$style.smali
decompiled_apk/smali_classes2/androidx/loader/: R$string.smali  R$style.smali
decompiled_apk/smali_classes2/androidx/recyclerview/: R$string.smali  R$style.smali
decompiled_apk/smali_classes2/androidx/transition/: R$color.smali  R$string.smali  R$style.smali
decompiled_apk/smali_classes2/androidx/vectordrawable/: R$string.smali  R$style.smali
decompiled_apk/smali_classes2/androidx/viewpager/: R$string.smali  R$style.smali
decompiled_apk/smali_classes2/androidx/viewpager2/: R$string.smali  R$style.smali
spy_monitor/: __init__.py
spymonitor/: __main__.py  app.py  app_kivymd.py  app_minimal.py  app_toga.py  main.py  views.py
spymonitor.dist-info/: METADATA  top_level.txt
tests/: test_app_backend_integration.py  test_end_to_end.py  test_utils.py
(+168 files in other folders)
